--- a/index.html
+++ b/index.html
@@ -19,18 +19,25 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 	<div class="jumbotron-container">
-		<h1>Tricia Ngoon</h1>
+		<h1>Lakshmi S. Menon</h1>
 	</div>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-4 col-md-offset-2" id="profile">
 				<div>
-					<img class="img-thumbnail img-fluid" id="profile-pic" src="https://picsum.photos/300"/>
+					<img src = "images/P1292072.jpg" height = "250" width = "175">
 				</div>
 			</div>
-			<br><br>
+			<div>
+			<h3>About Me</h3>
+			</div>
+		</div>
+			<br>
 			<div class="col-md-8" id="about" style="position: right">
-				<p>I am a fourth-year Ph.D student in Cognitive Science at UCSD. Etiam vitae tortor. Vestibulum suscipit nulla quis orci. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis.Donec mi odio, faucibus at, scelerisque quis, convallis in, nisi. Cras dapibus. Pellentesque dapibus hendrerit tortor.</p>
+				<p>I am a third year Cognitive Science student at the University of California, San Diego. I am specializing in Machine Learning and Neural Computation and minoring in mathematics. I am interested in data science and its various applications and also have experience with neurofeedback training and EEG testing. In my free time I enjoy dancing, reading, and listening to music.
+				</p>
+				<p> <a href = "docs/Copy of Resume.pdf">View my resume</a>
+				</p>
 			</div>
 		</div>
 		<br>
@@ -41,36 +48,29 @@
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		</div>
 		<br>
-		<div>
-			<div class="project" id="project1">
-				<a href="#">
-					<img src="images/lorempixel.people.2.jpeg" class="img-thumbnail" alt="Lorem Pixel image"/>
-					<p>Peer Feedback</p>
-				</a>
-				<p class="project-text">Cras sagittis. Vestibulum fringilla pede sit amet augue. Curabitur blandit mollis lacus. Cras risus ipsum, faucibus ut, ullamcorper id, varius ac, leo.</p>
-			</div>
-			<div class="project" id="project2">
-				<a href="#">
-					<img src="images/lorempixel.city.1.jpeg" class="img-thumbnail" alt="Lorem Pixel image">
-					<p>Creative Education</p>
-				</a>
-				<p class="project-text">Cras sagittis. Vestibulum fringilla pede sit amet augue. Curabitur blandit mollis lacus. Cras risus ipsum, faucibus ut, ullamcorper id, varius ac, leo.</p>
-			</div>
-			<div class="project" id="project3">
-				<a href="#">
-					<img src="images/lorempixel.technics.1.jpeg" class="img-thumbnail" alt="Lorem Pixel image">
-					<p>Patterning</p>
-				</a>
-				<p class="project-text">Cras sagittis. Vestibulum fringilla pede sit amet augue. Curabitur blandit mollis lacus. Cras risus ipsum, faucibus ut, ullamcorper id, varius ac, leo.</p>
-			</div>
+		<div>					
+			<ul>
+				<div class="project" id="project1">		
+					<li><h4>Regression on Countries of the World Dataset</h4>
+						<img src="images/map.gif" class="img-thumbnail" alt="World Map"/>
+						<p class="project-text">I worked with a group of three others to perform some data analysis and modelling on a dataset containing socioeconomic and demographic information for 227 countries. We used linear regression to predict the GDP of a country from various other attributes.</p>
+						<p> <a href = "docs/Final Poster.pdf">Click here to view our final poster</a>
+						</p>
+					</li>
+				</div>
+				<div class="project" id="project2">		
+					<li>
+						<h4>Check back here for future projects as they are completed!</h4>
+					</li>
+				</div>
+			</ul>		
 		</div>
-	</div>
 	<div class="row col-md-12">
 		<h4>Contact</h4>
 	</div>
 	<div class="contact">
-		<a href="#">tngoon.ucsd.edu</a>
-		<!-- <a href="mailto:tngoon" class="fa fa-envelope fa-lg"></a>
+		<a href="#">lmenon@ucsd.edu</a>
+		<!-- <a href="mailto:lmenon" class="fa fa-envelope fa-lg"></a>
 		<a href="#" class="fa fa-github fa-lg"></a> -->
 	</div>
 </body>
