--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -25,40 +27,40 @@
 		<div class="row">
 			<div class="col-md-4 col-md-offset-2" id="profile">
 				<div>
-					<img src = "images/P1292072.jpg" height = "250" width = "175">
+					<img src = "images/P1292072.jpg" class="img-thumbnail" height = "250" width = "175">
 				</div>
 			</div>
-			<div>
-			<h3>About Me</h3>
-			</div>
+			<div class="col-md-4"  style="position: right">
+			<h2>About Me</h2>
+		<!--<div class="col-md-4"  style="position: right">-->
+			<p id="about">I am a third year Cognitive Science student at the University of California, San Diego. I am specializing in Machine Learning and Neural Computation and minoring in mathematics. I am interested in data science and its various applications and also have experience with neurofeedback training and EEG testing. In my free time I enjoy dancing, reading, and listening to music.
+			</p>
+			<p> <a href = "docs/Copy of Resume.pdf">View my resume</a>
+			</p>
 		</div>
-			<br>
-			<div class="col-md-8" id="about" style="position: right">
-				<p>I am a third year Cognitive Science student at the University of California, San Diego. I am specializing in Machine Learning and Neural Computation and minoring in mathematics. I am interested in data science and its various applications and also have experience with neurofeedback training and EEG testing. In my free time I enjoy dancing, reading, and listening to music.
-				</p>
-				<p> <a href = "docs/Copy of Resume.pdf">View my resume</a>
-				</p>
-			</div>
 		</div>
-		<br>
-		<div class="row col-md-12">
-			<h2>Projects</h2>
+	</div>
+	<br>
+	<br>
+	<div class="row col-md-12">
+		<h2>Projects</h2>
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		</div>
-		<br>
-		<div>					
-			<ul>
-				<div class="project" id="project1">		
-					<li><h4>Regression on Countries of the World Dataset</h4>
-						<img src="images/map.gif" class="img-thumbnail" alt="World Map"/>
-						<p class="project-text">I worked with a group of three others to perform some data analysis and modelling on a dataset containing socioeconomic and demographic information for 227 countries. We used linear regression to predict the GDP of a country from various other attributes.</p>
+	</div>
+	<br>
+	<div class="row">					
+		<ul>
+			<div class="project col-md-8" id="project1">		
+				<li><h4>Regression on Countries of the World Dataset</h4>
+					<img src="images/map.gif" class="img-thumbnail" alt="World Map" >
+					<p class="project-text">I worked with a group of three others to perform some data analysis and modelling on a dataset containing socioeconomic and demographic information for 227 countries. We used linear regression to predict the GDP of a country from various other attributes.</p>
 						<p> <a href = "docs/Final Poster.pdf">Click here to view our final poster</a>
 						</p>
 					</li>
 				</div>
-				<div class="project" id="project2">		
+				<br><br>
+				<div class="project col-md-4" id="project2">		
 					<li>
 						<h4>Check back here for future projects as they are completed!</h4>
 					</li>
@@ -66,7 +68,7 @@
 			</ul>		
 		</div>
 	<div class="row col-md-12">
-		<h4>Contact</h4>
+		<h2>Contact</h2>
 	</div>
 	<div class="contact">
 		<a href="#">lmenon@ucsd.edu</a>
