Lab 4 updates- Finalized styling and included new project

--- a/index.html
+++ b/index.html
@@ -36,16 +36,14 @@
 			</div>
 			<div class="col-md-4" style="position: right">
 				<h2>About Me</h2>
-		<!--<div class="col-md-4"  style="position: right">-->
-			<p id="about">I am a third year Cognitive Science student at the University of California, San Diego. I am specializing in Machine Learning and Neural Computation and minoring in mathematics. I am interested in data science and its various applications and also have experience with neurofeedback training and EEG testing. In my free time I enjoy dancing, reading, and listening to music.
-			</p>
-			<p> <a href = "docs/Copy of Resume.pdf">View my resume</a>
-			</p>
+				<p id="about">I am a third year Cognitive Science student at the University of California, San Diego. I am specializing in Machine Learning and Neural Computation and minoring in mathematics. I am interested in data science and its various applications and also have experience with neurofeedback training and EEG testing. In my free time I enjoy dancing, reading, and listening to music.
+				</p>
+				<p> <a href = "docs/Copy of Resume.pdf">View my resume</a>
+				</p>
 			</div>
 		</div>
 	</div>
-	<br>
-	<br>
+	<br><br>
 	<div class="row col-md-12" id="projects">
 		<h2>Projects</h2>
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
@@ -54,24 +52,35 @@
 	</div>
 	<br>
 	<div class="row">					
-		<div class="project col-md-4" id="project1">	
-				<h5>Regression on Countries of the World Dataset</h5>
-	
-			<a>
-			<img src="images/map.gif" class="img-thumbnail" alt="World Map" height="300" width="250"/></a>
+		<div class="project col-md-3" id="project1">	
+			<h5>Regression on Countries of the World Dataset</h5>	
+			<a><img src="images/map.gif" class="img-thumbnail" alt="World Map" height="300" width="250"/></a>
 			<p class="project-text">I worked with a group of three others to perform some data analysis and modelling on a dataset containing socioeconomic and demographic information for 227 countries. We used linear regression to predict the GDP of a country from various other attributes.<br><br>
 			 <a href = "docs/Final Poster.pdf">Click here to view our final poster</a>
 			</p>		
 		</div>	
-		<div class="project col-md-4" id="project2">		
+		<br><br>
+		<div class="project col-md-3" id="project2">	
+			<h5>Brake Light Redesign</h5>	
+			<br>
+			<a><img src="images/Brake Light.png" class="img-thumbnail" alt="Brake Light Redesign" height="300" width="250"/></a>
+			<p class="project-text">I worked with a group of four others to come up with a more efficient redesign for brake lights. We conducted user interviews to target concerns with the current design and then attempted to resolve these issues in our redesign.<br><br>
+			<a href = "docs/DSGN 1 Final Project - Presentation.pptx">Click here to view our final presentation</a>
+			<br>
+			<a href = "https://www.youtube.com/watch?v=chXPxQ2yrr0">Click here to view our 1 min project introduction video</a>
+			</p>		
+		</div>	
+		<br><br>
+		<div class="project col-md-3" id="project2">		
 			<h5>Check back here for future projects as they are completed!</h5>
 		</div>
 	</div>
+	<br><br>
 	<div class="row col-md-12">
 		<h2>Contact</h2>
 	</div>
 	<div class="contact" id = "contacts">
-		<a href="#">lmenon@ucsd.edu</a>
+		<a href="mailto:lmenon@ucsd.edu">lmenon@ucsd.edu</a>
 		<!-- <a href="mailto:lmenon" class="fa fa-envelope fa-lg"></a>
 		<a href="#" class="fa fa-github fa-lg"></a> -->
 	</div>
