--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div class="project col-md-3" id="project2">	
 			<h5>Brake Light Redesign</h5>	
 			<br>
-			<a><img src="images/Brake Light.png" class="img-thumbnail" alt="Brake Light Redesign" height="300" width="250"/></a>
+			<a><img src="images/Brake Light.PNG" class="img-thumbnail" alt="Brake Light Redesign" height="300" width="250"/></a>
 			<p class="project-text">I worked with a group of four others to come up with a more efficient redesign for brake lights. We conducted user interviews to target concerns with the current design and then attempted to resolve these issues in our redesign.<br><br>
 			<a href = "docs/DSGN 1 Final Project - Presentation.pptx">Click here to view our final presentation</a>
 			<br>
