Changed resume to LinkedIn profile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<h2>Contact</h2>
 	</div>
 	<div class="contact" id = "contacts">
-		<a href="mailto:lmenon@ucsd.edu">lmenon@ucsd.edu</a>
+		<a href="https://www.linkedin.com/in/lakimenon/">View my LinkedIn Profile</a>
 		<!-- <a href="mailto:lmenon" class="fa fa-envelope fa-lg"></a>
 		<a href="#" class="fa fa-github fa-lg"></a> -->
 	</div>
